--- a/analysis/exploreArrayBias450.Rmd
+++ b/analysis/exploreArrayBias450.Rmd
@@ -1,15 +1,17 @@
 ---
 title: 'Gene set testing for Illumina HumanMethylation Arrays'
+subtitle: "Exploring the biases on 450k arrays"
 author: "Jovana Maksimovic, Alicia Oshlack and Belinda Phipson"
 date: '`r format(Sys.Date(), "%B %d, %Y")`'
+output: html_document
 ---
 
-```{r setup, include=FALSE}
+```{r, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 options(scipen=10000)
 ```
 
-```{r libload, message=FALSE}
+```{r, message=FALSE, warning=FALSE, results='hide'}
 library(here)
 library(glue)
 library(minfi)
@@ -188,10 +190,6 @@ p + stat_summary(geom="point", size=1, color="white", position = position_dodge(
        fill="Adj. type")
 ```
 
-
-```{r}
-sessionInfo()
-```
 
 
 
