--- a/analysis/exploreData.Rmd
+++ b/analysis/exploreData.Rmd
@@ -1,7 +1,9 @@
 ---
 title: 'Gene set testing for Illumina HumanMethylation Arrays'
+subtitle: "Evaluating the performance of different methods"
 author: "Jovana Maksimovic, Alicia Oshlack and Belinda Phipson"
 date: '`r format(Sys.Date(), "%B %d, %Y")`'
+output: html_document
 ---
 
 ```{r setup, include=FALSE}
@@ -9,7 +11,7 @@ knitr::opts_chunk$set(echo = TRUE)
 ```
 
 
-```{r libload, message=FALSE}
+```{r, message=FALSE, warning=FALSE, results='hide'}
 library(here)
 library(minfi)
 library(paletteer)
@@ -381,6 +383,60 @@ ggplot(sub, aes(pvalue, fill = method)) +
     labs(x = "P-value", y = "Frequency", fill = "Method")
 ```
 
+### Compare gometh results using different DM CpG significance cutoffs
+
+```{r, fig.width=7, fig.height=8}
+immuneGO <- unique(read.csv(here("data/GO-immune-system-process.txt"),
+                            stringsAsFactors = FALSE, header = FALSE,
+                            col.names = "GOID"))
+
+dat %>% filter(set == "GO") %>%
+    filter(grepl("mmethyl", method)) %>% 
+    arrange(contrast, method, pvalue) %>%
+    group_by(contrast, method, sub) %>%
+    mutate(csum = cumsum(ID %in% immuneGO$GOID)) %>% 
+    mutate(rank = 1:n()) %>%
+    mutate(cut = ifelse(sub == "c1", "Top 5000", 
+                        ifelse(sub == "c2", "Top 10000",
+                               ifelse(sub == "p1", "FDR < 0.01", "FDR < 0.05")))) %>%
+    filter(rank <= 100) -> sub
+
+p <- ggplot(sub, aes(x = rank, y = csum, colour = cut)) +
+    geom_line() +
+    facet_wrap(vars(contrast, method), ncol=2, nrow = 3, scales = "free") +
+    geom_vline(xintercept = 10, linetype = "dotted") +
+    labs(colour = "Sig. select", x = "Rank", y = "Cumulative no. immune sets") +
+    theme(legend.position = "bottom")
+p
+```
+
+```{r, fig.width=7, fig.height=8}
+immuneGO <- readRDS(here("data/RNAseq-GO.rds"))
+immuneGO %>% group_by(contrast) %>%
+    mutate(rank = 1:n()) %>%
+    filter(rank <= 100) -> topSets
+
+dat %>% filter(set == "GO") %>%
+    filter(grepl("mmethyl", method)) %>% 
+    arrange(contrast, method, pvalue) %>%
+    group_by(contrast, method, sub) %>%
+    mutate(csum = cumsum(ID %in% topSets$ID[topSets$contrast %in% contrast])) %>%
+    mutate(rank = 1:n()) %>%
+    mutate(cut = ifelse(sub == "c1", "Top 5000", 
+                        ifelse(sub == "c2", "Top 10000",
+                               ifelse(sub == "p1", "FDR < 0.01", "FDR < 0.05")))) %>%
+    filter(rank <= 100) -> sub
+
+p <- ggplot(sub, aes(x = rank, y = csum, colour = cut)) +
+    geom_line() +
+    facet_wrap(vars(contrast, method), ncol=2, nrow = 3, scales = "free") +
+    geom_vline(xintercept = 10, linetype = "dotted") +
+    labs(colour = "Sig. select", x = "Rank", 
+         y = glue("Cumulative no. RNAseq sets")) +
+    theme(legend.position = "bottom")
+p
+```
+
 ## Test KEGG pathways
 
 Now test KEGG pathways with at least 5 genes and 5000 at most.
@@ -506,6 +562,62 @@ ggplot(sub, aes(pvalue, fill = method)) +
     labs(x = "P-value", y = "Frequency", fill = "Method")
 ```
 
+### Compare gometh results using different DM CpG significance cutoffs
+
+```{r, fig.width=7, fig.height=8}
+immuneKEGG <- read.csv(here("data/kegg-immune-related-pathways.csv"), 
+                            stringsAsFactors = FALSE, header = FALSE, 
+                            col.names = c("ID","pathway"))
+immuneKEGG$PID <- paste0("path:hsa0",immuneKEGG$ID)
+
+dat %>% filter(set == "KEGG") %>%
+    filter(grepl("mmethyl", method)) %>% 
+    arrange(contrast, method, pvalue) %>%
+    group_by(contrast, method, sub) %>%
+    mutate(csum = cumsum(ID %in% immuneKEGG$PID)) %>% 
+    mutate(rank = 1:n()) %>%
+    mutate(cut = ifelse(sub == "c1", "Top 5000", 
+                        ifelse(sub == "c2", "Top 10000",
+                               ifelse(sub == "p1", "FDR < 0.01", "FDR < 0.05")))) %>%
+    filter(rank <= 100) -> sub
+
+p <- ggplot(sub, aes(x = rank, y = csum, colour = cut)) +
+    geom_line() +
+    facet_wrap(vars(contrast, method), ncol=2, nrow = 3, scales = "free") +
+    geom_vline(xintercept = 10, linetype = "dotted") +
+    labs(colour = "Sig. select", x = "Rank", y = "Cumulative no. immune sets") +
+    theme(legend.position = "bottom")
+p
+```
+
+```{r, fig.width=7, fig.height=8}
+immuneKEGG <- readRDS(here("data/RNAseq-KEGG.rds"))
+immuneKEGG %>% group_by(contrast) %>%
+    mutate(rank = 1:n()) %>%
+    filter(rank <= 100) -> topSets
+
+dat %>% filter(set == "KEGG") %>%
+    filter(grepl("mmethyl", method)) %>% 
+    arrange(contrast, method, pvalue) %>%
+    group_by(contrast, method, sub) %>%
+    mutate(csum = cumsum(ID %in% topSets$PID[topSets$contrast %in% contrast])) %>%
+    mutate(rank = 1:n()) %>%
+    mutate(cut = ifelse(sub == "c1", "Top 5000", 
+                        ifelse(sub == "c2", "Top 10000",
+                               ifelse(sub == "p1", "FDR < 0.01", "FDR < 0.05")))) %>%
+    filter(rank <= 100) -> sub
+
+p <- ggplot(sub, aes(x = rank, y = csum, colour = cut)) +
+    geom_line() +
+    facet_wrap(vars(contrast, method), ncol=2, nrow = 3, scales = "free") +
+    geom_vline(xintercept = 10, linetype = "dotted") +
+    labs(colour = "Sig. select", x = "Rank", 
+         y = glue("Cumulative no. RNAseq sets")) +
+    theme(legend.position = "bottom")
+p
+```
+
+
 ## Test BROAD gene sets
 
 As the ebGSEA method from the ChAMP package only allows testing of their in-built database of Broad Institute gene sets, we will compare to other methods by testing these same gene sets. We are using the top 100 ranked gene sets as identified by `camera` analysis of the corresponding RNAseq data as "truth".
@@ -623,4 +735,58 @@ ggplot(sub, aes(pvalue, fill = method)) +
     facet_grid(cols = vars(contrast), rows = vars(method)) +
     theme(legend.position = "bottom") +
     labs(x = "P-value", y = "Frequency", fill = "Method")
+```
+
+### Compare gometh results using different DM CpG significance cutoffs
+
+```{r, fig.width=7, fig.height=8}
+immuneBROAD <- readRDS(here("data/RNAseq-BROAD.rds"))
+immuneBROAD %>% group_by(contrast) %>%
+    mutate(rank = 1:n()) %>%
+    filter(rank <= 100) -> topSets
+
+dat %>% filter(set == "BROAD") %>%
+    filter(grepl("mmethyl", method)) %>% 
+    arrange(contrast, method, pvalue) %>%
+    group_by(contrast, method, sub) %>%
+    mutate(csum = cumsum(ID %in% topSets$ID)) %>% 
+    mutate(rank = 1:n()) %>%
+    mutate(cut = ifelse(sub == "c1", "Top 5000", 
+                        ifelse(sub == "c2", "Top 10000",
+                               ifelse(sub == "p1", "FDR < 0.01", "FDR < 0.05")))) %>%
+    filter(rank <= 100) -> sub
+
+p <- ggplot(sub, aes(x = rank, y = csum, colour = cut)) +
+    geom_line() +
+    facet_wrap(vars(contrast, method), ncol=2, nrow = 3, scales = "free") +
+    geom_vline(xintercept = 10, linetype = "dotted") +
+    labs(colour = "Sig. select", x = "Rank", y = "Cumulative no. immune sets") +
+    theme(legend.position = "bottom")
+p
+```
+
+```{r, fig.width=7, fig.height=8}
+immuneBROAD <- readRDS(here("data/RNAseq-BROAD-GSA.rds"))
+immuneBROAD %>% group_by(contrast) %>%
+    mutate(rank = 1:n()) %>%
+    filter(rank <= 100) -> topSets
+
+dat %>% filter(set == "BROAD") %>%
+    filter(grepl("mmethyl", method)) %>% 
+    arrange(contrast, method, pvalue) %>%
+    group_by(contrast, method, sub) %>%
+    mutate(csum = cumsum(ID %in% topSets$ID)) %>% 
+    mutate(rank = 1:n()) %>%
+    mutate(cut = ifelse(sub == "c1", "Top 5000", 
+                        ifelse(sub == "c2", "Top 10000",
+                               ifelse(sub == "p1", "FDR < 0.01", "FDR < 0.05")))) %>%
+    filter(rank <= 100) -> sub
+
+p <- ggplot(sub, aes(x = rank, y = csum, colour = cut)) +
+    geom_line() +
+    facet_wrap(vars(contrast, method), ncol=2, nrow = 3, scales = "free") +
+    geom_vline(xintercept = 10, linetype = "dotted") +
+    labs(colour = "Sig. select", x = "Rank", y = "Cumulative no. immune sets") +
+    theme(legend.position = "bottom")
+p
 ```
