wflow_publish(c("analysis/runTimeComparison.Rmd", "analysis/exploreData.Rmd",     "analysis/expressionGenesets.Rmd"))

--- a/analysis/exploreData.Rmd
+++ b/analysis/exploreData.Rmd
@@ -150,7 +150,7 @@ mdat %>% dplyr::select(-cpg) %>%
     group_by(variable, entrezid, promoter) %>%
     #summarise(coef = coefficient[which.max(abs(coefficient))]) -> mdat
     summarise(coef = median(coefficient)) %>%
-    filter(promoter == "prom") -> mdat
+    dplyr::filter(promoter == "prom") -> mdat
 
 mdat %>% inner_join(rdat, by = c("entrezid", "variable")) %>%
     mutate(colour = ifelse(FDR < 0.05, "Sig.", "Not sig.")) -> dat
