--- a/analysis/runTimeComparison.Rmd
+++ b/analysis/runTimeComparison.Rmd
@@ -26,6 +26,7 @@ library(IlluminaHumanMethylationEPICanno.ilm10b4.hg19)
 library(EnsDb.Hsapiens.v75)
 library(ChAMP)
 library(methylGSA)
+library(gt)
 ```
 
 # Compare run-time of different methods
@@ -230,5 +231,26 @@ layout <- c(area(t = 0, l = 1, b = 5, r = 4),
             area(t = 2, l = 3, b = 3, r = 4))
 p1 + p2 + theme(text = element_text(size = 8), legend.position = "none") + 
     plot_layout(design = layout, guides = "collect")
+```
+
+```{r}
+timing %>% group_by(method) %>%
+    mutate(time = as.integer(time)) %>%
+    summarise(mean = mean(time)) %>%
+    mutate(mins = mean/60) %>%
+    as_tibble() -> tab
+
+tab %>% gt() %>%
+    fmt_number(columns = vars(mean, mins), decimals = 2) %>%
+    cols_label(
+        mean = md("**Seconds**"),
+        mins = md("**Minutes**"),
+        method = md("**Method**")
+        ) %>%
+  tab_header(
+    title = md("**Average run-time across all contrasts**"),
+    subtitle = md("Using Broad MSigDB gene sets from `ChAMP` package")
+    ) %>%
+  tab_source_note(md("_*All methods were run on a single core._"))
 ```
 
