--- a/analysis/regionAnalysis.Rmd
+++ b/analysis/regionAnalysis.Rmd
@@ -26,6 +26,7 @@ library(UpSetR)
 library(dplyr)
 library(patchwork)
 library(tibble)
+library(grid)
 library(TxDb.Hsapiens.UCSC.hg19.knownGene)
 source(here("code/utility.R"))
 ```
@@ -474,13 +475,17 @@ for(i in 1:ncol(cont.matrix)){
     dat %>% filter(contrast == colnames(cont.matrix)[i]) -> tmp
     tmp <- split(tmp$cpgs, f = tmp$method)
     p[[i]] <- upset(fromList(tmp), order.by = "freq", keep.order = TRUE, 
-               sets = names(tmp))
+               sets = names(tmp), sets.bar.color = c("#f46864", "#25b138", 
+                                                     "#5495fc"))
     
 }
 
 p[[1]]
+grid.text(colnames(cont.matrix)[1],x = 0.65, y=0.95, gp=gpar(fontsize=16))
 p[[2]]
+grid.text(colnames(cont.matrix)[2],x = 0.65, y=0.95, gp=gpar(fontsize=16))
 p[[3]]
+grid.text(colnames(cont.matrix)[3],x = 0.65, y=0.95, gp=gpar(fontsize=16))
 ```
 
 ## Gene overlap between region-wise and probe-wise approaches
@@ -498,13 +503,17 @@ for(i in 1:ncol(cont.matrix)){
 
     tmp <- split(tmp$entrezid, f = tmp$method)
     p[[i]] <- upset(fromList(tmp), order.by = "freq", keep.order = TRUE, 
-               sets = names(tmp))
+               sets = names(tmp), sets.bar.color = c("#f46864", "#25b138", 
+                                                     "#5495fc"))
     
 }
 
 p[[1]]
+grid.text(colnames(cont.matrix)[1],x = 0.65, y=0.95, gp=gpar(fontsize=16))
 p[[2]]
+grid.text(colnames(cont.matrix)[2],x = 0.65, y=0.95, gp=gpar(fontsize=16))
 p[[3]]
+grid.text(colnames(cont.matrix)[3],x = 0.65, y=0.95, gp=gpar(fontsize=16))
 ```
 
 ## Effect of DMR cut offs i.e. num probes in region and absolute delta beta
